--- a/index.html
+++ b/index.html
@@ -348,7 +348,6 @@
       </div>
     </section>
   </main>
-
   <!-- подвал -->
   <footer class="footer">
     <div class="container footer-links">
@@ -447,7 +446,6 @@
         </div>
         <label class="input-label" for="user-coment">Комментарий</label>
         <textarea class="modal-input coment" name="user-coment" id="user-coment" placeholder="Введите текст"></textarea>
-
         <div class="accept">
           <label class="police-accept">
             <input class="check-box visually-hidden" type="checkbox" name="accept-check">
@@ -457,7 +455,9 @@
             <svg class="icon-checked" width="16" height="15">
               <use href="./images/icons.svg#icon-checked"></use>
             </svg>
-            Соглашаюсь с рассылкой и принимаю </label> <a href="" class="accept-accent"><span>Условия
+            Соглашаюсь с рассылкой и принимаю
+          </label>
+          <a href="" class="accept-accent"><span>Условия
               договора</span></a>
         </div>
         <button class="subscribe-btn centering send" type="submit">Отправить</button>
