--- a/index.html
+++ b/index.html
@@ -20,35 +20,35 @@
   <!-- верхняя линия -->
   <header class="header">
     <div class="container header-bar">
-      <a class="site-logo link" href="./index.html" lang="en">Web<span class="header-logo-studio">Studio</span>
+      <a class="logo header__logo link" href="./index.html" lang="en">Web<span class="logo__accent">Studio</span>
       </a>
-      <nav class="header-nav">
-        <ul class="header-list list">
-          <li class="header-item">
-            <a class="header-link link current" href="./index.html">Студия
+      <nav class="nav-bar">
+        <ul class="nav-bar__list list">
+          <li class="nav-bar__item">
+            <a class="nav-bar__link nav-bar__link--active link nav-bar__current" href="./index.html">Студия
             </a>
           </li>
-          <li class="header-item">
-            <a class="header-link link" href="./portfolio.html">Портфолио
+          <li class="nav-bar__item">
+            <a class="nav-bar__link link" href="./portfolio.html">Портфолио
             </a>
           </li>
-          <li class="header-item">
-            <a class="header-link link" href="">Контакты</a>
+          <li class="nav-bar__item">
+            <a class="nav-bar__link link" href="">Контакты</a>
           </li>
         </ul>
       </nav>
-      <ul class="header-contact-list list">
-        <li class="header-contact-item">
-          <a class="header-contact-link link header-link-select centering" href="mailto:info@devstudio.com">
-            <svg class="mail-icon contacts-icon" width="16" height="12">
+      <ul class="contacts list">
+        <li class="contacts__item">
+          <a class="contacts__link link centering" href="mailto:info@devstudio.com">
+            <svg class="contacts__icon" width="16" height="12">
               <use href="./images/icons.svg#envelope"></use>
             </svg>
             info@devstudio.com
           </a>
         </li>
-        <li class="header-contact-item">
-          <a class="header-contact-link link header-link-select centering" href="tel:+380961111111">
-            <svg class="smartphone-icon contacts-icon" width="10" height="16">
+        <li class="contacts__item">
+          <a class="contacts__link link centering" href="tel:+380961111111">
+            <svg class="contacts__icon" width="10" height="16">
               <use href="./images/icons.svg#smartphone"></use>
             </svg>+38 096 111 11 11
           </a>
@@ -58,61 +58,61 @@
   </header>
   <!-- шапка -->
   <main class="main">
-    <section class="section-hero overlay">
+    <section class="section-hero">
       <div class="container">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button class="hero-btn" type="button" data-modal-open>Заказать услугу</button>
+        <h1 class="section-hero__title">Эффективные решения для вашего бизнеса</h1>
+        <button class="section-hero__btn" type="button" data-modal-open>Заказать услугу</button>
       </div>
     </section>
     <!-- особенности -->
-    <section class="specificity section">
+    <section class="speciality section">
       <div class="container">
         <h2 class="visually-hidden">особенности</h2>
-        <ul class="specificity-list list">
-          <li class="specificity-item">
-            <div class="specif-icon-bg centering">
-              <svg class="specificity-icon" width="70" height="70">
+        <ul class="speciality__list list">
+          <li class="speciality__item">
+            <div class="speciality__icon-bg centering">
+              <svg class="speciality__icon" width="70" height="70">
                 <use href="./images/icons.svg#antenna"></use>
               </svg>
             </div>
-            <h3 class="specificity-title">Внимание к деталям</h3>
-            <p class="specificity-text">
+            <h3 class="speciality__title">Внимание к деталям</h3>
+            <p class="speciality__text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li class="specificity-item">
-            <div class="specif-icon-bg centering">
-              <svg class="specificity-icon" width="70" height="70">
+          <li class="speciality__item">
+            <div class="speciality__icon-bg centering">
+              <svg class="speciality__icon" width="70" height="70">
                 <use href="./images/icons.svg#clock"></use>
               </svg>
             </div>
-            <h3 class="specificity-title">Пунктуальность</h3>
-            <p class="specificity-text">
+            <h3 class="speciality__title">Пунктуальность</h3>
+            <p class="speciality__text">
               Задача организации, в особенности же рамки и место обучения
               кадров влечет за собой.
             </p>
           </li>
-          <li class="specificity-item">
-            <div class="specif-icon-bg centering">
-              <svg class="specificity-icon" width="70" height="70">
+          <li class="speciality__item">
+            <div class="speciality__icon-bg centering">
+              <svg class="speciality__icon" width="70" height="70">
                 <use href="./images/icons.svg#diagram"></use>
               </svg>
             </div>
-            <h3 class="specificity-title">Планирование</h3>
-            <p class="specificity-text">
+            <h3 class="speciality__title">Планирование</h3>
+            <p class="speciality__text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li class="specificity-item">
-            <div class="specif-icon-bg centering">
-              <svg class="specificity-icon" width="70" height="70">
+          <li class="speciality__item">
+            <div class="speciality__icon-bg centering">
+              <svg class="speciality__icon" width="70" height="70">
                 <use href="./images/icons.svg#astronaut"></use>
               </svg>
             </div>
-            <h3 class="specificity-title">Современные технологии</h3>
-            <p class="specificity-text">
+            <h3 class="speciality__title">Современные технологии</h3>
+            <p class="speciality__text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -349,55 +349,63 @@
     </section>
   </main>
   <!-- подвал -->
+
+
+
   <footer class="footer">
-    <div class="container footer-links">
-      <div class="logo-contacts">
-        <a class="site-logo link footer" href="./index.html" lang="en">Web<span class="footer-logo-studio">Studio</span>
+    <div class="container footer-bar">
+      <div class="footer-info">
+        <a class="logo link" href="./index.html" lang="en">Web<span class="logo__accent--light">Studio</span>
         </a>
-        <address class="footer-address">
-          <ul class="footer-list list">
-            <li class="footer-item">
-              <a class="footer-map-link link footer-link-select" href="https://goo.gl/maps/tbNQQ5aqf2PmWXbj7"
-                target="_blank" rel="noopener noreferrer">
+        <address class="footer-info__address">
+          <ul class="footer-info__list list">
+            <li class="footer-info__item">
+              <a class="footer-info__map map-link link" href="https://goo.gl/maps/tbNQQ5aqf2PmWXbj7" target="_blank"
+                rel="noopener noreferrer">
                 г. Киев, пр-т Леси Украинки, 26</a>
             </li>
-            <li class="footer-item">
-              <a class="footer-contact-link link footer-link-select" href="mailto:info@example.com">info@example.com
+            <li class="footer-info__item">
+              <a class="footer-info__contact link" href="mailto:info@example.com">info@example.com
               </a>
             </li>
-            <li class="footer-item">
-              <a class="footer-contact-link link footer-link-select" href="tel:+380991111111">+38 099 111 11 11
+            <li class="footer-info__item">
+              <a class="footer-info__contact link" href="tel:+380991111111">+38 099 111 11 11
               </a>
             </li>
           </ul>
         </address>
       </div>
-      <div class="social-links">
-        <p class="title">присоединяйтесь</p>
-        <ul class="company-social-links list">
-          <li class="item">
-            <a class="company-social-link link centering" href=""><svg class="company-social-icon" width="20"
+
+
+
+
+
+      <div class="company-socials">
+        <p class="company-socials__title">присоединяйтесь</p>
+        <ul class="company-socials__list list">
+          <li class="company-socials__item">
+            <a class="company-socials__link link centering" href=""><svg class="company-socials__icon" width="20"
                 height="20">
                 <use href="./images/icons.svg#instagram"></use>
               </svg>
             </a>
           </li>
-          <li class="item">
-            <a class="company-social-link link centering" href=""> <svg class="company-social-icon" width="20"
+          <li class="company-socials__item">
+            <a class="company-socials__link link centering" href=""> <svg class="company-socials__icon" width="20"
                 height="20">
                 <use href="./images/icons.svg#twitter"></use>
               </svg>
             </a>
           </li>
-          <li class="item">
-            <a class="company-social-link link centering" href=""> <svg class="company-social-icon" width="20"
+          <li class="company-socials__item">
+            <a class="company-socials__link link centering" href=""> <svg class="company-socials__icon" width="20"
                 height="20">
                 <use href="./images/icons.svg#facebook"></use>
               </svg>
             </a>
           </li>
-          <li class="item">
-            <a class="company-social-link link centering" href=""> <svg class="company-social-icon" width="20"
+          <li class="company-socials__item">
+            <a class="company-socials__link link centering" href=""> <svg class="company-socials__icon" width="20"
                 height="20">
                 <use href="./images/icons.svg#linkedin"></use>
               </svg>
@@ -405,6 +413,9 @@
           </li>
         </ul>
       </div>
+
+
+
       <div class="subscribe">
         <label class="title" for="subscribe">Подпишитесь на рассылку</label>
         <form class="centering" name="signup_form" autocomplete="on" novalidate>
@@ -419,6 +430,10 @@
       </div>
     </div>
   </footer>
+
+
+
+
   <div class="backdrop is-hidden" data-modal>
     <div class="modal">
       <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
