--- a/portfolio.html
+++ b/portfolio.html
@@ -20,38 +20,37 @@
   <!-- верхняя линия -->
   <header class="header">
     <div class="container header-bar">
-      <a class="site-logo link" href="./index.html" lang="en">Web<span class="header-logo-studio">Studio</span>
+      <a class="logo link" href="./index.html" lang="en">Web<span class="logo__accent">Studio</span>
       </a>
-      <nav class="header-nav">
-        <ul class="header-list list">
-          <li class="header-item">
-            <a class="header-link link header-link-select" href="./index.html">Студия
+      <nav class="nav-bar">
+        <ul class="nav-bar__list list">
+          <li class="nav-bar__item">
+            <a class="nav-bar__link link" href="./index.html">Студия
             </a>
           </li>
-          <li class="header-item">
-            <a class="header-link link header-link-select current" href="./portfolio.html">Портфолио
+          <li class="nav-bar__item">
+            <a class="nav-bar__link nav-bar__link--active link" href="./portfolio.html">Портфолио
             </a>
           </li>
-          <li class="header-item">
-            <a class="header-link link header-link-select" href="">Контакты</a>
+          <li class="nav-bar__item">
+            <a class="nav-bar__link link" href="">Контакты</a>
           </li>
         </ul>
       </nav>
-      <ul class="header-contact-list list">
-        <li class="header-contact-item">
-          <a class="header-contact-link link header-link-select centering" href="mailto:info@devstudio.com">
-            <svg class="mail-icon contacts-icon" width="16" height="12">
+      <ul class="contacts list">
+        <li class="contacts__item">
+          <a class="contacts__link link centering" href="mailto:info@devstudio.com">
+            <svg class="contacts__icon" width="16" height="12">
               <use href="./images/icons.svg#envelope"></use>
             </svg>
             info@devstudio.com
           </a>
         </li>
-        <li class="header-contact-item">
-          <a class="header-contact-link link header-link-select centering" href="tel:+380961111111">
-            <svg class="smartphone-icon contacts-icon" width="10" height="16">
+        <li class="contacts__item">
+          <a class="contacts__link link centering" href="tel:+380961111111">
+            <svg class="contacts__icon" width="10" height="16">
               <use href="./images/icons.svg#smartphone"></use>
-            </svg>
-            +38 096 111 11 11
+            </svg>+38 096 111 11 11
           </a>
         </li>
       </ul>
@@ -245,9 +244,9 @@
 
   <!-- подвал -->
   <footer class="footer">
-    <div class="container footer-links">
+    <div class="container footer-bar">
       <div class="logo-contacts">
-        <a class="site-logo link footer" href="./index.html" lang="en">Web<span class="footer-logo-studio">Studio</span>
+        <a class="logo link" href="./index.html" lang="en">Web<span class="logo__accent--light">Studio</span>
         </a>
         <address class="footer-address">
           <ul class="footer-list list">
@@ -267,32 +266,36 @@
           </ul>
         </address>
       </div>
-      <div class="social-links">
-        <p class="title">присоединяйтесь</p>
-        <ul class="company-social-links list">
-          <li class="item">
-            <a class="company-social-link link centering" href=""><svg class="company-social-icon" width="20"
+
+
+
+
+      <div class="company-socials">
+        <p class="company-socials__title">присоединяйтесь</p>
+        <ul class="company-socials__list list">
+          <li class="company-socials__item">
+            <a class="company-socials__link link centering" href=""><svg class="company-socials__icon" width="20"
                 height="20">
                 <use href="./images/icons.svg#instagram"></use>
               </svg>
             </a>
           </li>
-          <li class="item">
-            <a class="company-social-link link centering" href=""> <svg class="company-social-icon" width="20"
+          <li class="company-socials__item">
+            <a class="company-socials__link link centering" href=""> <svg class="company-socials__icon" width="20"
                 height="20">
                 <use href="./images/icons.svg#twitter"></use>
               </svg>
             </a>
           </li>
-          <li class="item">
-            <a class="company-social-link link centering" href=""> <svg class="company-social-icon" width="20"
+          <li class="company-socials__item">
+            <a class="company-socials__link link centering" href=""> <svg class="company-socials__icon" width="20"
                 height="20">
                 <use href="./images/icons.svg#facebook"></use>
               </svg>
             </a>
           </li>
-          <li class="item">
-            <a class="company-social-link link centering" href=""> <svg class="company-social-icon" width="20"
+          <li class="company-socials__item">
+            <a class="company-socials__link link centering" href=""> <svg class="company-socials__icon" width="20"
                 height="20">
                 <use href="./images/icons.svg#linkedin"></use>
               </svg>
@@ -300,6 +303,11 @@
           </li>
         </ul>
       </div>
+
+
+
+
+
       <div class="subscribe">
         <label class="title" for="subscribe">Подпишитесь на рассылку</label>
         <form class="centering" name="signup_form" autocomplete="on" novalidate>
@@ -312,7 +320,6 @@
           </button>
         </form>
       </div>
-
     </div>
   </footer>
 </body>
