CSS to SASS moved

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="./css/main.min.css" />
   <title>Web studio</title>
 </head>
 
@@ -375,11 +375,6 @@
           </ul>
         </address>
       </div>
-
-
-
-
-
       <div class="company-socials">
         <p class="company-socials__title">присоединяйтесь</p>
         <ul class="company-socials__list list">
@@ -413,9 +408,6 @@
           </li>
         </ul>
       </div>
-
-
-
       <div class="subscribe">
         <label class="title" for="subscribe">Подпишитесь на рассылку</label>
         <form class="centering" name="signup_form" autocomplete="on" novalidate>
