--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="./css/main.min.css" />
   <title>Web studio</title>
 </head>
 
@@ -20,7 +20,7 @@
   <!-- верхняя линия -->
   <header class="header">
     <div class="container header-bar">
-      <a class="logo link" href="./index.html" lang="en">Web<span class="logo__accent">Studio</span>
+      <a class="logo header__logo link" href="./index.html" lang="en">Web<span class="logo__accent">Studio</span>
       </a>
       <nav class="nav-bar">
         <ul class="nav-bar__list list">
@@ -245,31 +245,27 @@
   <!-- подвал -->
   <footer class="footer">
     <div class="container footer-bar">
-      <div class="logo-contacts">
+      <div class="footer-info">
         <a class="logo link" href="./index.html" lang="en">Web<span class="logo__accent--light">Studio</span>
         </a>
-        <address class="footer-address">
-          <ul class="footer-list list">
-            <li class="footer-item">
-              <a class="footer-map-link link footer-link-select" href="https://goo.gl/maps/tbNQQ5aqf2PmWXbj7"
-                target="_blank" rel="noopener noreferrer">
+        <address class="footer-info__address">
+          <ul class="footer-info__list list">
+            <li class="footer-info__item">
+              <a class="footer-info__map map-link link" href="https://goo.gl/maps/tbNQQ5aqf2PmWXbj7" target="_blank"
+                rel="noopener noreferrer">
                 г. Киев, пр-т Леси Украинки, 26</a>
             </li>
-            <li class="footer-item">
-              <a class="footer-contact-link link footer-link-select" href="mailto:info@example.com">info@example.com
+            <li class="footer-info__item">
+              <a class="footer-info__contact link" href="mailto:info@example.com">info@example.com
               </a>
             </li>
-            <li class="footer-item">
-              <a class="footer-contact-link link footer-link-select" href="tel:+380991111111">+38 099 111 11 11
+            <li class="footer-info__item">
+              <a class="footer-info__contact link" href="tel:+380991111111">+38 099 111 11 11
               </a>
             </li>
           </ul>
         </address>
       </div>
-
-
-
-
       <div class="company-socials">
         <p class="company-socials__title">присоединяйтесь</p>
         <ul class="company-socials__list list">
@@ -303,11 +299,6 @@
           </li>
         </ul>
       </div>
-
-
-
-
-
       <div class="subscribe">
         <label class="title" for="subscribe">Подпишитесь на рассылку</label>
         <form class="centering" name="signup_form" autocomplete="on" novalidate>
